# PracticalProgrammer

Monolith/: console_client.py  db_filler.py  main (копия).py  main.py  server.py
Monolith/core/: abstractrepository.py  dbengine.py  dbengine_async.py  engine.py  engine_utils.py  exception_types.py  memory_cache.py  prefix_processor.py
add_boost/: CMakeLists.txt  conanfile.txt
add_boost/src/: main.cpp
calc_coverage/: CMakeLists.txt
calc_coverage/src/: CMakeLists.txt
calc_coverage/src/arithmetic/: CMakeLists.txt  run.cpp
calc_coverage/test/: CMakeLists.txt  arithmetic_test.cpp  run_test.cpp
calc_test/: CMakeLists.txt
calc_test/test/: CMakeLists.txt  arithmetic_test.cpp
calc_test_conan_1_X/: CMakeLists.txt  conanfile.txt
calc_test_conan_1_X/src/: main.cpp
calc_test_conan_1_X/src/logic/: CMakeLists.txt
calc_test_conan_1_X/test/: CMakeLists.txt
calc_test_conan_2_X/src/arithmetic/: arithmetic.cpp  arithmetic.h
calc_test_conan_2_X/src/logic/: logic.h
calc_test_conan_2_X/test/: CMakeLists.txt  arithmetic_test.cpp
calc_valgrind/: CMakeLists.txt
calc_valgrind/modules/: Valgrind.cmake
calc_valgrind/src/: bootstrap.cpp
calc_valgrind/src/arithmetic/: CMakeLists.txt  calculator.cpp  calculator.h
calc_valgrind/src/logic/: CMakeLists.txt
calc_valgrind/test/: CMakeLists.txt  algo_test.cpp  arithmetic_test.cpp  logic_test.cpp  variable_test.cpp
calculator/: CMakeLists.txt
calculator/src/: CMakeLists.txt
calculator/src/arithmetic/: CMakeLists.txt
calculator/src/logic/: logic.cpp
